<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top">

            <EditText
                android:id="@+id/editText_Search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:text="@string/editView_Search"></EditText>

            <Button
                android:id="@+id/btn_Search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:text="@string/btn_Search"></Button>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_Recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/textView_Recent"></TextView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageBtn1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_camera"></ImageButton>

            <ImageButton
                android:id="@+id/imageBtn2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_camera"></ImageButton>

            <ImageButton
                android:id="@+id/imageBtn3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_camera"></ImageButton>

            <ImageButton
                android:id="@+id/imageBtn4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_camera"></ImageButton>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top">

            <Button
                android:id="@+id/btn_Gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="40dp"
                android:text="@string/btn_Gallery"></Button>

            <Button
                android:id="@+id/btn_Take"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_Take"></Button>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageBtn_preview"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="5dp"
            android:src="@android:mipmap/sym_def_app_icon"></ImageView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center|top">

            <Button
                android:id="@+id/btn_Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:text="@string/btn_Edit"></Button>

            <Button
                android:id="@+id/btn_Rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:text="@string/btn_Rotate"></Button>

            <Button
                android:id="@+id/btn_Flip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:text="@string/btn_Flip"></Button>

            <Button
                android:id="@+id/btn_Crop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_Crop"></Button>
        </LinearLayout>

        <Button
            android:id="@+id/btn_Final_Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/btn_Final_Search"></Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>